<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MedActivity">

    <TextView
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/title"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/medviewid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold" >

    </ListView>

        <Button
            android:id="@+id/addmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:padding="15dp"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textColor="@color/material_pink"
            />

    <Button
        android:id="@+id/delmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/del"
        android:padding="15dp"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textColor="@color/material_pink"
        />



</LinearLayout>

