<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddMed">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/material_blue"
        android:text="@string/medname" />

    <EditText
        android:id="@+id/medid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/material_blue"
        android:text="@string/morn" />

    <EditText
        android:id="@+id/mornid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/material_blue"
        android:text="@string/noon" />

    <EditText
        android:id="@+id/noonid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/material_blue"
        android:text="@string/even" />

    <EditText
        android:id="@+id/eveid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ADD"
            android:padding="15dp"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:textColor="@color/material_pink"
            />
        <Button
            android:id="@+id/cancelid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:padding="15dp"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:textColor="@color/material_pink"
            />


    </LinearLayout>

</LinearLayout>